# pedalo_harness

./: .gitignore  README.md  main.py  pedalo.py  pyproject.toml
brain/: scanner.py
core/: loop.py
prompts/: loader.py
prompts/compaction/: summarize.md
prompts/system/: brain.md  default.md  environment.md
providers/: base.py  registry.py
providers/ollama/: models.json  provider.py
skills/: loader.py
tools/: loader.py
tools/builtin/: bash.py  check_process.py  edit_file.py  read_file.py  run_background.py  write_file.py
ui/: app.py  confirm.py  lake.py  processes.py
